Attempting to stop text getting cropped in select elements, DT-1610

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -609,7 +609,9 @@ article.blog-post-item {
 	}
 	.productlist-display-form {
 		.form-group {
+			vertical-align: top;
 			select {
+				padding: 7px 14px 7px;
 				background-color: lighten(@color-swatch1, 20%);
 				@media @tablet {
 					margin-left: 0;
@@ -649,10 +651,9 @@ article.blog-post-item {
         .border-radius(4px);
         height: 40px;
         line-height: 50px;
-        margin-left: 6px;
+        margin-right: 6px;
         -webkit-appearance: menulist;
         border: 1px solid lighten(@color-swatch7, 2%);
-        padding: 14px 5px 14px 12px;
         @media @tablet {
         	background-position: 98% center;
             width: 100%;
